@@ -1,3 +1,8 @@
+2004-11-08  Nate Nielsen <nielsen@memberwebs.com>
+	
+	* libseahorse/seahorse-widget.c: Help | Contents menu item now
+	works (bug# 157579) [Julio M. Merino Vidal]
+	
 2004-11-05	Nate Nielsen <nielsen@memberwebs.com>
 
 	* src/seahorse-key-manager.c:
